welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:17: error: ')' expected but '<-' found.
for((i<-1 to 3){faireW()}
      ^